# prc

./: .gitignore  .gitmodules  Makefile.am  TODO  autogen.sh  common.am  configure.ac  git-version
include/prc/: prc.h
lib/: Makefile.am  buh  bus  dbuf.c  dbuf.h  dll.c  dll.h  prc.c  prc.h  sll.c  sll.h  version.h.in
lib/prc/: Makefile.am  prc.c
m4/: ax_pthread.m4
plugins/: Makefile.am  chess.c  chess.h  courier.c  ctcp.c  dice.c  echo.c  facts.c  facts.h  fullwidth.c  magic.c  poll.c  poll.h  quote.c  rot13.c  rps.c  rps.h  segfault.c  sysinfo.c  time.c  weight.c  weight.h  weight_handler.c
src/: Makefile.am  buf.c  buf.h  cfg.c  cfg.h  cmds.c  config.h  controller.c  controller.h  dbuf.c  dbuf.h  epoll.c  epoll.h  event.c  event.h  facts.c  facts.h  handler.c  handler.h  method.c  method.h  network.c  network.h  plugin.c  plugin.h  prc.c  prc.h  proto-old.c  proto.c  proto.h  sasl.c  sasl.h  sll.c  sll.h  term.c  term.h  worker.c  worker.h
src/cli/: cli.c
